# alibabacloud-hologres-mcp-server

./: .coverage  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  README_ZH.md  RELEASE_NOTES.md  hologres_mcp_log.out  package-lock.json  package.json  pyproject.toml
hologres_mcp_cli/: SKILL.md  hologres_mcp_cli.py
src/hologres_mcp_server/: hologres_mcp_log.out  server.py  server_legacy.py  settings.py  utils.py
tests/: TEST_CASE_README.md  conftest.py
tests/integration/: .test_mcp_client_env_example  __init__.py  test_full_coverage_integration.py  test_mcp_integration.py  test_new_tools_integration.py
tests/unit/: __init__.py  test_chart.py  test_concurrency.py  test_coverage_gaps.py  test_new_tools.py  test_package.py  test_prompts.py  test_resources.py  test_server_main.py  test_settings.py  test_sql_injection.py  test_sql_validation.py  test_tools.py  test_utils.py
