[project]
name = "hologres-mcp-server"
version = "0.2.0"
description = "A MCP Server for Hologres"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["mcp", "hologres", "database", "alibaba-cloud"]
classifiers = [
 "License :: OSI Approved :: Apache Software License",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11",
 "Programming Language :: Python :: 3.12",
]
dependencies = [
 "httpx>=0.28.1",
 "mcp>=1.4.1",
 "python-dotenv>=1.0.1",
 "psycopg>=3.1.0",
 "psycopg-binary>=3.1.0",
 "pglast>=7.5"
]
[[project.authors]]
name = "TimothyDing"
email = "ding_ye_timo@163.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
hologres-mcp-server = "hologres_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require database connection)",
]

[tool.coverage.run]
source = ["src/hologres_mcp_server"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/server_legacy.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
